--- a/site/css/style.css
+++ b/site/css/style.css
@@ -34,14 +34,9 @@ img {
     margin: 0 auto;
     padding: 0;
     display: block;
-    border-radius: 2px;
+    border-radius: 3px;
 }
-img.black_img {
-    box-shadow: 0 0 70px 10px black;
-    padding: 0;
-    margin: 1em;
-    float: left
-}
+
 a {
     transition: color .2s ease-in-out;
     transition: background-color .2s ease-in-out;
@@ -85,9 +80,6 @@ h4 {
 .grey {
     color: #aaa
 }
-.highline {
-    line-height: 2rem;
-}
 
 h3 {
     margin: 0;
@@ -130,4 +122,8 @@ img.about_img {
     min-height: 300px;
     width: 100%;
     height: 100%;
+}
+
+@media screen and (max-width: 1000px) {
+
 }
