--- a/site/css/gallery.css
+++ b/site/css/gallery.css
@@ -21,16 +21,18 @@
     top: 0.5rem;
     left: 1rem;
     font-size: 1rem;
-    background: rgba(255,0,0,0.2);
+    font-weight: bold;
+    background: rgba(255,0,0,0.6);
     color: #fff;
     width: 5rem;
     height: 1.5rem;
     line-height: 1.5rem;
     z-index: 1;
+    text-align: center;
 }
 
 #gallery .gallery-img .fader {
-    width: 100%;
+    width: 90%;
     height: 100%;
     opacity: 0;
     display: flex;
@@ -39,6 +41,7 @@
     flex-direction: column;
     background: rgba(0, 0, 0, 0.7);
     transition: opacity .2s ease-in-out;
+    padding: 0 5%;
 }
 
 .hidden {
@@ -53,6 +56,11 @@ iframe#the-video {
 
 #gallery .gallery-img:hover .fader {
     opacity: 1;
+}
+.gallery-img.prodgal{
+    width: 40% !important;
+    height: 300px !important;
+    background-size: 150% auto !important;
 }
 
 #blackend {
@@ -85,29 +93,27 @@ iframe#the-video {
     display: block;
 }
 
-#blackend #the-pic-title {
-    text-align: center;
-    font-size: 1.5rem;
+#blackend #the-pic-description {
+    font-size: 1.1rem;
     position: fixed;
-    width: 100%;
-    height: 2rem;
+    width: 90%;
+    min-height: 2rem;
     left: 0;
-    bottom: 3rem;
-    background: rgba(0, 0, 0, 0.7);
-    z-index: 2;
-}
-
-#blackend #the-pic-subtitle {
-    text-align: center;
-    font-size: 1rem;
-    color: grey;
-    position: fixed;
-    width: 100%;
-    height: 2rem;
-    left: 0;
+    right: 0;
     bottom: 1rem;
     background: rgba(0, 0, 0, 0.7);
     z-index: 2;
+    margin: auto;
+    padding: 0.5% 5%;
+}
+
+#blackend #the-pic-description div {
+    text-align: center;
+}
+
+#blackend #the-pic-description div:first-child {
+    text-align: center;
+    font-size: 1.5rem;
 }
 
 #blackend .close {
