--- a/site/css/product.css
+++ b/site/css/product.css
@@ -3,12 +3,13 @@ div.page_menu {
     margin: 0 auto;
     margin-top: 1em;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
 
 
 }
 a.page_nav {
-    padding: 2rem 1rem 0.5rem 1rem;
+    padding: 1.5rem 1.5rem 0.5rem 1.5rem;
     background-color: #0A0A0A;
     margin: auto;
     display: block;
@@ -19,7 +20,7 @@ a.page_nav:hover {
     background-color: #111
 }
 a.madeinisrael {
-    padding: 2rem 1rem 0.5rem 1rem;
+    padding: 1.5rem 1.5rem 0.5rem 1.5rem;
     background-color: #000039;
     margin: auto;
     font-weight: bold;
@@ -31,7 +32,7 @@ a.madeinisrael:hover {
     background-color: #000099
 }
 a.natural {
-    padding: 2rem 1rem 0.5rem 1rem;
+    padding: 1.5rem 1.5rem 0.5rem 1.5rem;
     background-color: green;
     margin: auto;
     font-weight: bold;
