changed links (absolute --> relative) and added <base> and updated DB.sql

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -303,7 +303,7 @@ div.slide_img img {
 }
 .slick-loading .slick-list
 {
-    background: #fff url('/img/ajax-loader.gif') center center no-repeat;
+    background: #fff url('../../img/ajax-loader.gif') center center no-repeat;
 }
 
 /* Icons */
