--- a/site/css/header.css
+++ b/site/css/header.css
@@ -54,7 +54,7 @@ div.top {
     height: auto;
     width: 100%;
     margin: auto;
-    background-image: url("/img/strip1.jpg");
+    background-image: url("../../img/strip1.jpg");
     display: block;
     text-align: center;
     border-radius: 0;
