--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,6 +1,6 @@
 body {
     background: #1a1a1a;
-    background-image: url("/img/forberz_back3.png");
+    background-image: url("../../img/forberz_back3.png");
     margin: 0px;
     padding: 0px;
     width: 100%;
