--- a/site/css/gallery.css
+++ b/site/css/gallery.css
@@ -89,6 +89,7 @@ iframe#the-video {
     bottom: 0;
     margin: auto;
     max-width: 100%;
+    max-height: 100%;
     z-index: 1;
     display: block;
 }
