--- a/site/css/product.css
+++ b/site/css/product.css
@@ -115,15 +115,15 @@ select.sel {
     transition: background .2s ease-in-out;
     color: #fff;
     background: #000039;
-    font-size: 1.4rem;
+    font-size: 2em;
     cursor: pointer;
     border: 0;
     margin: 0.5rem 1rem;
     padding: 0 0.5rem;
-    width: 8rem;
-    height: 2.5rem;
+    width: 7em;
+    height: 1.5em;
     text-align: center;
-    border-radius: 6px;
+    border-radius: 3px;
 }
 .payment_btn input[type="submit"]:hover {
     background: #000066;
@@ -188,29 +188,29 @@ ul.other_point li{
 
 #coupon {
     width: 50%;
-    height: 2.5rem;
-    line-height: 2.5rem;
+    height: 1.5em;
+    line-height: 1.5em;
     margin: 1rem 0;
     display: inline-block;
-    border-radius: 6px;
+    border-radius: 3px;
     cursor: text;
-    font-size: 1.5rem;
+    font-size: 1.2em;
     padding: 0 2%;
 }
 
 
 #coupon_button {
     width: 25%;
-    height: 2.5rem;
-    line-height: 2.5rem;
+    height: 1.7em;
+    line-height: 1.7em;
     margin: 1rem;
     display: inline-block;
     border-radius: 6px;
     cursor: pointer;
-    font-size: 1.5rem;
+    font-size: 1.2em;
     text-align: center;
     background: #000039;
-    color: #fff;
+    color: #fefefe;
 }
 
 .buttons_before_prod, body.rtl .buttons_before_prod {
@@ -237,4 +237,7 @@ span.cat_sub {
     font-size: 0.7em;
     display: inline-block;
     color: lightgrey;
+}
+h1.fship {
+    color: orange;
 }
