--- a/site/css/style.css
+++ b/site/css/style.css
@@ -135,6 +135,9 @@ img.about_img {
     width: 100%;
     height: 100%;
 }
+img.about_logo {
+    width: 70%;
+}
 
 @media screen and (max-width: 1000px) {
 
