--- a/site/css/media.css
+++ b/site/css/media.css
@@ -208,16 +208,11 @@
         font-size: 1rem !important;
         display: inline-block !important;
         line-height: 1.5rem !important;
-    }
-    div.top {
-        background-color: #000039;
-        background-image: none;
-    }
-    
+    }    
     img.logo {
         width: 80%;
-        padding: 2rem 0 1.5rem 0;
-        background-color: rgba(0,0,0,0);
+        padding: 2rem 2rem 1.5rem 2rem;
+        background-color: rgba(0,0,0,0.5);
     }
     
     img.guide_img_right , img.guide_img_left {
