--- a/site/css/style.css
+++ b/site/css/style.css
@@ -37,6 +37,9 @@ img {
 }
 img.social_icon {
     display: inline-block;
+    height: 24px;
+    margin: 0 auto;
+    padding: 0;
 }
 a {
     transition: color .2s ease-in-out;
