--- a/site/css/style.css
+++ b/site/css/style.css
@@ -142,6 +142,14 @@ img.about_logo {
     width: 70%;
 }
 
-@media screen and (max-width: 1000px) {
+#disqus_thread {
+    width: 70%;
+    margin: 5rem auto;
+}
 
+@media screen and (max-width: 1000px) {
+	#disqus_thread {
+	    width: 100%;
+	    margin: 5rem auto 0 auto;
+	}
 }
