--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,6 +1,6 @@
 div.main_mii {
 	width: 91.1%;
-	background-color: #000039;
+	background-color: #011638;
 	margin: 0 auto;
 	margin-top: 0.5rem;
 	padding: 0;
@@ -17,7 +17,7 @@ div.main_mii_text {
 }
 div.main_clients {
 	width: 91.1%;
-	background-color: #fff;
+	background-color: #fefefe;
 	margin: 0 auto;
 	margin-top: 0.2rem;
 	padding: 0;
@@ -43,7 +43,7 @@ img.client_logo {
 }
 div.main_natural {
 	width: 91.1%;
-	background-color: #005500;
+	background-color: #009900;
 	margin: 0 auto;
 	margin-top: 0.2rem;
 	padding: 0;
@@ -94,7 +94,7 @@ div.main_easyuse_text {
 }
 div.main_reviews {
 	width: 91.1%;
-	background-color: #333;
+	background-color: #000;
 	margin: 0 auto;
 	margin-top: 0.2rem;
 	padding: 0;
