--- a/site/css/media.css
+++ b/site/css/media.css
@@ -7,71 +7,77 @@
 		display: none;
 	}
 
-    #gallery .gallery-img {
-        width: 100% !important;
-        height: 200px !important;
-        margin: 0.5rem auto;
-    }
+	#gallery .gallery-img {
+		width: 100% !important;
+		height: 200px !important;
+		margin: 0.5rem auto;
+	}
+	
+	.shops tr {
+		display: flex;
+		flex-direction: column;
+		margin: 1rem 0;
+	}
 }
 @media screen and (min-width: 1000px) {
-    html[lang="he"] .buttons_before_prod, html[lang="he"] body.rtl .buttons_before_prod {
-        text-align: left !important;
-    }
-    .buttons_before_prod, body.rtl .buttons_before_prod {
-        text-align: right !important;
-    }
-    html[lang="he"] .buttons_before_prod a:last-child, 
-    html[lang="he"] body.rtl .buttons_before_prod a:last-child {
-        margin-left: -2rem;
-    }
-    html:not([lang="he"]) .buttons_before_prod a:last-child, 
-    html:not([lang="he"]) body.rtl .buttons_before_prod a:last-child {
-        margin-right: -2rem;
-    }
+	html[lang="he"] .buttons_before_prod, html[lang="he"] body.rtl .buttons_before_prod {
+		text-align: left !important;
+	}
+	.buttons_before_prod, body.rtl .buttons_before_prod {
+		text-align: right !important;
+	}
+	html[lang="he"] .buttons_before_prod a:last-child, 
+	html[lang="he"] body.rtl .buttons_before_prod a:last-child {
+		margin-left: -2rem;
+	}
+	html:not([lang="he"]) .buttons_before_prod a:last-child, 
+	html:not([lang="he"]) body.rtl .buttons_before_prod a:last-child {
+		margin-right: -2rem;
+	}
 }
 @media screen and (max-width: 1000px) {
-    body {
-        font-size: 1.3rem;
-        line-height: 1.3 !important;
-    }
+	body {
+		font-size: 1.3rem;
+		line-height: 1.3 !important;
+	}
 	div {
 		margin: auto;
 	}
-	    
-    div.about_forberz {
-    background-color: #0A0A0A;
-    min-height: 300px;
-    height: 100%;
-    margin: 0 auto;
-    padding: 0;
-    margin-top: 0.7rem;
-    }
-    
-    div.about_side_pic {
-    display: none;
-    }
-    
-    div.about_forberz_text {
-    width: 95%;
-    height: 100%;
-    margin: 0 auto;
-    padding: 0.5rem;
-    display: block;
-    vertical-align: top;
-    }
-    
-    div.main {
-        margin-top: 0.5em;
-    }
+		
+	div.about_forberz {
+	background-color: #0A0A0A;
+	min-height: 300px;
+	height: 100%;
+	margin: 0 auto;
+	padding: 0;
+	margin-top: 0.7rem;
+	}
+	
+	div.about_side_pic {
+	display: none;
+	}
+	
+	div.about_forberz_text {
+	width: 95%;
+	height: 100%;
+	margin: 0 auto;
+	padding: 0.5rem;
+	display: block;
+	vertical-align: top;
+	}
+	
+	div.main {
+		margin-top: 0.5em;
+	}
 
 	div#gallery {
 		width: 91%;
-    }
+	}
 
-    #gallery .gallery-img.prodgal {
-        height: 200px !important;
-        background-size: 200% auto !important;
-    }
+	#gallery .gallery-img.prodgal {
+		height: 200px !important;
+		background-size: 200% auto !important;
+	}
 
 	div.page_menu {
 		display: block;
@@ -91,57 +97,57 @@
 	img.product_eng {
 		max-width: 280px;
 	}
-    
+	
 	div.buy_rideeffect,
-    div.buy_detailhd {
-        width: 100%;
-        padding-bottom: 20rem !important;
-    }
+	div.buy_detailhd {
+		width: 100%;
+		padding-bottom: 20rem !important;
+	}
 	div.text_box {
 		width: 90%;
 		float: none !important;
 		padding: 1rem;
 	}
 
-    header + div.main_heb,
-    header + div.main_heb + div.buy,
-    header + div.main_heb + div.buy + div.shops > div,
-    div.shops {
-        padding: 5% !important;
-        width: 88%;
-    }
+	header + div.main_heb,
+	header + div.main_heb + div.buy,
+	header + div.main_heb + div.buy + div.shops > div,
+	div.shops {
+		padding: 5% !important;
+		width: 88%;
+	}
 	
 	div.main.table {
 		width: 100%;
 		padding: 0;
-    }
+	}
 	
 	div.main.table tr {
 		padding: 0.5rem 0;
 		height: 3rem;
 	}
 
-    div.buy {
-        width: 95% !important;
-    }
-    div.buy img {
-        float: none !important;
-        margin: 1em auto !important;
-        display: block;
-    }
-    .payment_btn {
-        flex-direction: column;
-        align-items: center;
-        bottom: 3rem;
-    }
-    .payment_btn input[type="submit"] {
-        font-size: 1.5em;
-    }
-    .payment_btn:after {
-        width: 90%;
-        padding: 0 5%;
-        bottom: -6rem;
-    }
+	div.buy {
+		width: 95% !important;
+	}
+	div.buy img {
+		float: none !important;
+		margin: 1em auto !important;
+		display: block;
+	}
+	.payment_btn {
+		flex-direction: column;
+		align-items: center;
+		bottom: 3rem;
+	}
+	.payment_btn input[type="submit"] {
+		font-size: 1.5em;
+	}
+	.payment_btn:after {
+		width: 90%;
+		padding: 0 5%;
+		bottom: -6rem;
+	}
 	div.footer_contact, div.footer_flex > ul {
 		width: 100%;
 		padding: 0 0.5rem;
@@ -152,130 +158,130 @@
 	}
 	
 	div.prod_img_buy {
-	    float: none;
+		float: none;
 		min-height: 300px;
 		margin: 0 auto !important;
 		width: 100% !important;
 	}
 	
 	div.prod_text_box {
-    width: 95% !important;
-    margin: 0 auto !important;
-    padding: 0.5rem !important;
-    }
-    
-    div.product_header {
-    /*margin-top: 0 !important;*/
-    }
-    
-    div.product_icons, div.product_header {
-    padding: 0.5rem !important;
-    }
+	width: 95% !important;
+	margin: 0 auto !important;
+	padding: 0.5rem !important;
+	}
+	
+	div.product_header {
+	/*margin-top: 0 !important;*/
+	}
+	
+	div.product_icons, div.product_header {
+	padding: 0.5rem !important;
+	}
 	
 	div.prod_img_buy.longer {
 		min-height: 700px;
 	}
 	div.catdiv_ltr {
 		position: relative;
-    }
+	}
 	div.prod_img_buy div.buy_title + select ~ form {
 		margin-top: 0;
 	}
-    div.main_menu {
-    display: inline-block;
-    margin: 0 auto;
-    padding: 1rem;
-    }
-    div.social {
-        display: flex;
-    }
-    ul.social_menu {
-    display: block !important;
-    font-size: 1rem !important;
-    line-height: 1.5rem !important;
-    }
-    ul.main_menu {
-        font-size: 1.4rem;
-    }
-    ul.main_menu li { 
-        display: block;
-        padding-top: 0.3rem;
-    }
-    ul.main_menu > li:last-child {
-        margin-bottom: 0.5rem;
-    }
-    ul.lang_menu {
-        font-size: 1rem !important;
-        display: inline-block !important;
-        line-height: 1.5rem !important;
-    }    
-    img.logo {
-        width: 80%;
-        padding: 2rem 2rem 1.5rem 2rem;
-        background-color: rgba(0,0,0,0.5);
-    }
-    
-    img.guide_img_right , img.guide_img_left {
-        float: none;
-        display: block;
-        margin: 1rem auto;
-        max-width:280px;
-    }
+	div.main_menu {
+	display: inline-block;
+	margin: 0 auto;
+	padding: 1rem;
+	}
+	div.social {
+		display: flex;
+	}
+	ul.social_menu {
+	display: block !important;
+	font-size: 1rem !important;
+	line-height: 1.5rem !important;
+	}
+	ul.main_menu {
+		font-size: 1.4rem;
+	}
+	ul.main_menu li { 
+		display: block;
+		padding-top: 0.3rem;
+	}
+	ul.main_menu > li:last-child {
+		margin-bottom: 0.5rem;
+	}
+	ul.lang_menu {
+		font-size: 1rem !important;
+		display: inline-block !important;
+		line-height: 1.5rem !important;
+	}    
+	img.logo {
+		width: 80%;
+		padding: 2rem 2rem 1.5rem 2rem;
+		background-color: rgba(0,0,0,0.5);
+	}
+	
+	img.guide_img_right , img.guide_img_left {
+		float: none;
+		display: block;
+		margin: 1rem auto;
+		max-width:280px;
+	}
 
-    img.guide_img_left:active, img.guide_img_right:active {
-        max-width:300px;
-        width:300px;
-    }
+	img.guide_img_left:active, img.guide_img_right:active {
+		max-width:300px;
+		width:300px;
+	}
 
-    div.page_menu {
-    	flex-direction: column;
-    }
+	div.page_menu {
+		flex-direction: column;
+	}
 
-    div.main_clients_text > *, div.page_menu > * {
-    	width: 91%;
-    }
+	div.main_clients_text > *, div.page_menu > * {
+		width: 91%;
+	}
 
-    div.about {
-    	position: relative;
-    	overflow: hidden;
-    }
+	div.about {
+		position: relative;
+		overflow: hidden;
+	}
 
-    div.about div.about_side_pic {
-    	position: absolute;
-    	top: 0;
-    	left: 0;
-	    width: 250px;
-	    z-index: 1;
-	    opacity: 0.3;
-    }
+	div.about div.about_side_pic {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 250px;
+		z-index: 1;
+		opacity: 0.3;
+	}
 
-    div.about div.about_text {
-    	text-shadow: 0 0 5px rgba(255, 255, 255, 0.7);
-	    z-index: 3;
-	    width: 100%;
-	    font-size: 1.2rem;
-    }
-    a.page_nav, a.madeinisrael, a.natural {
-        padding: 1rem !important;
-    }
+	div.about div.about_text {
+		text-shadow: 0 0 5px rgba(255, 255, 255, 0.7);
+		z-index: 3;
+		width: 100%;
+		font-size: 1.2rem;
+	}
+	a.page_nav, a.madeinisrael, a.natural {
+		padding: 1rem !important;
+	}
 
-    div.guide {
-        display: block;
-        width: 90%;
-    }
-    div.guide_img {
-        min-width: auto;
-    }
-    div.guide_item {
-        width: 95%;
-        margin: 1rem auto;
-        padding: 0.5rem;
-        /*display: inline-table;*/
-    }
-    div.guide_side_wrap, div.guide_header, div.inside {
-        float: none !important;
-        width: 100% !important;
-    }
+	div.guide {
+		display: block;
+		width: 90%;
+	}
+	div.guide_img {
+		min-width: auto;
+	}
+	div.guide_item {
+		width: 95%;
+		margin: 1rem auto;
+		padding: 0.5rem;
+		/*display: inline-table;*/
+	}
+	div.guide_side_wrap, div.guide_header, div.inside {
+		float: none !important;
+		width: 100% !important;
+	}
 }
 
 @media screen and (max-width: 1000px) and (orientation: portrait) {
