--- a/site/css/main.css
+++ b/site/css/main.css
@@ -20,15 +20,20 @@ div.ecoflex {
 }
 
 div.ecosqr {
-    background-color: rgba(0,0,0,0.9);
-    width: 32.3%;
-    border: 3px solid #009900
+    background-color: #009900;
+    width: 32.7%;
 }
-
+div.ecosqr1 {
+    background-color: #011638;
+    width: 32.7%;
+}
+div.ecosqr2 {
+    background-color: #222;
+    width: 32.7%;
+}
 div.ecotxt {
     padding: 0.5rem;
 }
-
 div.main_mii_title {
 	margin: 2rem auto;
 }
@@ -38,9 +43,9 @@ div.main_mii_text {
 }
 div.main_clients {
 	width: 91.1%;
-	background-color: #fefefe;
+	background-color: #fff;
 	margin: 0 auto;
-	margin-top: 0.2rem;
+	margin-top: 0.5rem;
 	padding: 0;
 	color: #111;
 	display: flex;
