--- a/site/css/product.css
+++ b/site/css/product.css
@@ -16,7 +16,7 @@ img.product_eng {
     margin-top: 1em;
 }
 div.catdiv {
-    background-color: #0A0A0A;
+    background-color: #000;
     min-height: 150px;
     height: 100%;
     width: 91.1%;
@@ -28,6 +28,7 @@ div.cat_wrap.insider, div.cat_wrap.insider * {
 }
 div.cat_wrap {
     margin: 0 auto;
+    border-top: 1px solid #222;
     padding: 0;
     display: block;
     width: auto;
@@ -35,12 +36,12 @@ div.cat_wrap {
     height: auto;
 }
 
-
 div.cat_wrap, div.cat_wrap * {
     cursor:pointer;
 }
 div.product_header {
-    background-color: #011638;
+    background-color: #000;
+    border-bottom: 1px solid white;
     height: auto;
     width: 88.7%;
     margin: 0 auto;
@@ -49,7 +50,8 @@ div.product_header {
 }
 div.product_icons {
     width: 88.7%;
-    background-color: #009900;
+    background-color: #000;
+    border-bottom: 1px solid white;
     height: auto;
     margin: 0 auto;
     padding: 0.5rem 1rem;
