--- a/site/css/header.css
+++ b/site/css/header.css
@@ -4,7 +4,7 @@ input {
 
 div.black_wrap {
     background-color: #000;
-    border-bottom: 1px solid #222;
+    /*border-bottom: 1px solid #222;*/
     height: auto;
     width: 100%;
     margin: 0 auto;
@@ -64,10 +64,15 @@ div.top {
     text-align: center;
     border-radius: 0;
 }
+div.top a {
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: rgba(0,0,0,0.5);
+}
 img.logo {
     margin: 0 auto;
-    width: 20em;
-    background-color: rgba(0,0,0,0.8);
+    width: 20rem;
     padding: 2rem 1.5rem 1rem 1.5rem;
     display: block;
     border-radius: 0;
