--- a/site/css/main.css
+++ b/site/css/main.css
@@ -36,6 +36,7 @@ div.buyflex {
 div.buysqr {
     background-color: #000;
     width: 32.7%;
+    display: inline;
 }
 div.ecosqr1 {
     background-color: #011638;
