--- a/site/css/media.css
+++ b/site/css/media.css
@@ -36,6 +36,9 @@
 	}
 }
 @media screen and (max-width: 1000px) {
+	h1 {
+		font-size: 1.8rem
+	}
 	body {
 		font-size: 1.3rem;
 		line-height: 1.3 !important;
@@ -213,8 +216,8 @@
 	}
 	ul.lang_menu {
 		font-size: 1rem !important;
-		display: inline-block !important;
 		line-height: 1.5rem !important;
+		position: relative !important;
 	}    
 	img.logo {
 		width: 80%;
